--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="./Stylesheet.css">
-   <script src="./Script3.js" defer></script>
+   <script src="Script3.js" defer></script>
 </head>
 
 <body>
