--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="./Stylesheet.css">
-   <script src="Script3.js" defer></script>
 </head>
 
 <body>
@@ -34,6 +33,7 @@
       <a href="STORM.html" target="_blank"><font face="Playfair Display" color="white" size="4">MUSIC</font></a>
     </div>
   </div>
+   <script src="Script3.js"></script>
 </body>
 
 </html>
